cell/src/main/resources/jetbrains/jetpad/cell/toDom/style.css
@eval textFont jetbrains.jetpad.projectional.view.gwt.View2Dom.font();
@def currentHighlightColor rgb(220, 222, 208);
@def lineHighlightColor rgb(254, 255, 215);
@def pairHighlightColor rgb(168, 214, 255);

@def redUnderline url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAECAYAAACtBE5DAAAALklEQVQIW2P8z8Dwn5GBAYhQAVgAXRLInw9XCZME0vFAtY4oRgAF/wEFHwEFFQA95gxCDQl2XAAAAABJRU5ErkJggg==);
@def yellowUnderline url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAECAYAAACtBE5DAAAANElEQVQIW2O8d4/hv5ISAyMDGgALoEvevcswH64SJnn/PkP8//8MjihGACX/AQ14BDRaAQCJ1RO6xCxNQgAAAABJRU5ErkJggg==);

.rootContainer:focus {
  outline: 0;
}

.rootContainer {
  position: relative;
  overflow: visible;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;

  -webkit-touch-callout: none;
  -webkit-user-select: none;

  width: fit-content;

  padding: 15px;
}

.content {
  padding: 0px;
  position: relative;
  z-index: 1;
}

.cell {
}

.lineHighight {
  background: lineHighlightColor;
  position: absolute;
  left: 0px;
  top:0px;
}

.horizontal {
  display: inline-block;
  white-space: nowrap;

  width: fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
}

.horizontal > div {
  display: inline-block;
  vertical-align : top;
}

.vertical > div {
  display: block;
  font-size: 0px;


  width: fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
}

.horizontal > div > .vertical {
  display: inline-block;
  font-size: 0px;
}

.domCell {
  font-size: 12px;
  user-select: text;
  -moz-user-select: text;
  -webkit-user-select: text;
  -ms-user-select: text;
  -webkit-user-select: text;

  width: fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
}

.indented {
}

.hidden {
  display: none !important;
}

.paired {
  background-color: pairHighlightColor;
}

.paired .horizontal {
  background-color: pairHighlightColor;
}

.paired[style] {
  background-color: pairHighlightColor !important;
}

.selected {
  background-color: Highlight !important;
  color: HighlightText !important;

  outline: 1px dotted black;
}

.selected .selected {
  outline: 0px;
}

.selected .cell {
  background-color: Highlight !important;
  color: HighlightText !important;
}

.hasShadow {
  box-shadow: 5px 5px 10px black;
}

.hasError {
  background: redUnderline bottom repeat-x !important;
}

.hasWarning {
  background: yellowUnderline bottom repeat-x !important;
}

.decorations {
  width: 100%;
  height: 100%;
}

